// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`byte metric 1`] = `
<EuiCard
  description="Heap Total"
  layout="horizontal"
  title="1.40 GB"
/>
`;

exports[`float metric 1`] = `
<EuiCard
  description="Load"
  layout="horizontal"
  title="4.05, 3.37, 3.12"
/>
`;

exports[`general metric 1`] = `
<EuiCard
  description="A metric"
  layout="horizontal"
  title="1.80"
/>
`;

exports[`millisecond metric 1`] = `
<EuiCard
  description="Response Time Max"
  layout="horizontal"
  title="1234.00 ms"
/>
`;
